# dual-rail

./: .gitignore  ArmCpuState.txt  Dockerfile  Makefile  aes.c  analysis.ipynb  dump.txt  notes.txt  pico_settings.pssettings  plaintexts.h  test.c  test.elf
aes/: Makefile  aes_test.c  test  tinyAES.c
analysis/: add.py  analysis.ipynb  analysis.r  and.py  correlation_500mV.csv  dpa.r  multiop.py  multiop.py~  orr.py  p5.txt  plaintexts.txt  sub.py  util.py  util.py~  xor.py
analysis/operations/: and.py  sub.py
arithmetic/: add.py  and.py  convert.py  mul.py  multiop.py  orr.py  sub.py  util.py  xor.py
bare_bones/: Makefile  aes.c  print.h  test.c
clang_cross/: Makefile  program.S
evaluation/: boundaries.py  filter.py  parse.py  plot_aes_parts.py  validate_files.py
experimentation/: eval.py  test.tex  tikz_plot.tex  visualize_eval.py
experimentation/00_bare_bones/: Makefile  eval.json  test.c  tinyAES.h
experimentation/01_first_step/: Makefile  program.c.s
experimentation/02_clang_cross/: Makefile  eval.json
experimentation/03_manual_replacement/: Makefile  eval.json  eval_optimized.json  manual.LL  program.c
experimentation/04_aes/: Makefile  eval.json  pass_print.h  program.c  tinyAES.c
experimentation/05_manual_aes/: Makefile  definitions.h  eval.json  rtlib.c  tinyAES.c  tinyAES.ll  tinyAES.ll.commented
experimentation/05_pass/: Makefile  eval.json  program.c  rtlib.c  tinyAES.c  tinyAES.h  unbalanced_rtlib.c
experimentation/05_pass_debug/: Makefile  eval.json  eval_direct_mul.json  eval_loop_mul.json  program.c  rtlib.c
experimentation/06_aes_pass_test/: Makefile  definitions.h  eval.json  eval_globals.json  pass_print.h  print.h  program.c  rtlib.c  startup.s  tinyAES.c  tinyAES.h
experimentation/06_pass_debug/: Makefile  eval.json  program.c  rtlib.c
experimentation/07_sha3/: Makefile  debug.c  eval.json  keccak.c  keccak.h  program.c
experimentation/08_sha_balanced/: Makefile  debug.c  definitions.h  eval.json  keccak.c  program.c
experimentation/09_rc4/: Makefile  eval.json  eval_unbalanced.json  program.c  rc4  rc4.c  rtlib.c
exposee/: Makefile  exposee.tex  sources.bib
exposee/v3/: Makefile  (+5 more)
first_step/: Makefile
generator/: .ycm_extra_conf.py  Makefile  dual-rail.h  generate.py  lut.h  lut_mult.h  lut_plus.h  lut_sbox.h  out  s_box.h  test.c
operator_eval/: build_table.py  filter.py  parse.py  validate.py
passes/: Balance.cpp  CMakeLists.txt  Insert.cpp
passes/hello/: CMakeLists.txt  Hello.cpp
picoscope/: .editorconfig  .ycm_extra_conf.py  corr.py  dpa.py  eval.py  extract_csv.py  load_csv.py  measure_and_save.py  sbox.py  test.py  visualize.py
picoscope/arduino_io/: CMakeLists.txt  arduino_io  main.cpp  plaintexts.txt  tty.cpp  tty.hpp  tty_utils.hpp
picoscope/generate_plaintexts/: CMakeLists.txt  main.cpp
picoscope/pico_to_csv/: CMakeLists.txt  main.cpp  pico.cpp  pico.hpp
picoscope/send_and_measure/: CMakeLists.txt  main.cpp  pico.cpp  pico.hpp  tty.cpp  tty.hpp  tty_utils.cpp  tty_utils.hpp
presentation/: outline.txt  presentation.md
writing/: diagram.tex
(+152 files in other folders)
